--- a/product-detail.html
+++ b/product-detail.html
@@ -60,9 +60,6 @@
                             <a href="#my-album">Album</a>
                         </li>
                         <li>
-                            <a href="#product-title">Product</a>
-                        </li>
-                        <li>
                             <a href="#contact">Contact</a>
                         </li>
                         <li><a type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fa fa-shopping-bag" aria-hidden="true"></i><span class="position-absolute top-30 translate-middle badge bg-transparent bg-danger " id="badge" >{{total || 0}}</span></a></li>
@@ -144,7 +141,6 @@
                 <form>
                     <div class="product-item">
                         <div class="product-img"><img src="./images/product-item/{{item[0].image}}" alt="product" class="img-fluid"></div>
-                        <div class="product-description">{{item[0].description}}.</div>
                     </div>
                     <div class="product-cart">
                         <div class="product-name">
@@ -167,13 +163,12 @@
                         <div class="items product-info">
                             <div data-bs-toggle="collapse" data-parent="#accordion" href="#collapseOne" role="button" aria-expanded="false" aria-controls="collapseOne">
                                 <div>
-                                    <p>PEODUCT INFO</p>
+                                    <p>PRODUCT INFO</p>
                                     <ion-icon name="add-outline"></ion-icon>
                                 </div>
                                 <div class="collapse" id="collapseOne">
                                     <div class="document">
-                                        I'm a product detail. I'm a great place to add more information about your product such as sizing, material, care and cleaning instructions. This is also a great space to write what makes this product special and how your customers can benefit from this
-                                        item.
+                                        {{item[0].description}}
                                     </div>
                                 </div>
                             </div>
